<resources>
    <string name="app_name">JustinQuizApp2.1</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="login">Login here</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="add">add</string>
    <string name="status">Status</string>
    <string name="welcome">Welcome</string>
    <string name="last_edited_time">Last Edited Time</string>
    <string name="add_student">Add Student</string>
    <string name="manage_quiz">Manage Quiz</string>
    <string name="delete">delete</string>
    <string name="enter_quiz_id">Enter Quiz ID</string>
    <string name="add_new_quiz">Add New Quiz</string>
    <string name="import_files">Import Files</string>
    <string name="or">OR</string>
    <string name="done">Done</string>
    <string name="add_mcq_question">Add MCQ question</string>
    <string name="date_and_time">Date and Time</string>
    <string name="duration">Duration:</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="quiz_id">Quiz ID</string>
    <string name="quiz_questions_successfully_added">Quiz Questions successfully added</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next">Next</string>
    <string name="score">Score</string>
    <string name="your_score">Your Score:</string>
    <string name="result">Result</string>
    <string name="student">Student</string>
    <string name="id">id</string>
</resources>