<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.questions.QuestionFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:title="@string/quiz_title"
            app:titleCentered="true"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question Title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioOp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioOp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_2"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioOp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioOp4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_4"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"
            android:backgroundTint="@color/gray"
            android:paddingHorizontal="45dp"
            android:text="@string/next" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>