<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:padding="16dp"
            style="@style/Widget.Material3.CardView.Outlined"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="match_parent"

                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvQuizTitle"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvQuizID"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/quiz_id" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDuration"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/duration" />


                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDelete"
                    android:text="@string/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"/>
            </LinearLayout>





        </LinearLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>