<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.student.StudentHomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="64dp"
        android:background="@color/gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textStyle="bold"

            android:background="@color/gray"
            android:padding="15dp"
            />

        <TextView
            android:id="@+id/tvStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="25sp"
            android:textStyle="bold"

            android:background="@color/gray"
            android:padding="15dp"
            />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilQuizId"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"


        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etQuizID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_quiz_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="GO"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:src="@drawable/ic_exit"/>

</FrameLayout>